fix(homepage): Fixing homepage blocks not being clickable on mobile (#202)
* Fixing homepage blocks not being clickable on mobile

* Adding in pointer: coarse to account for mobile

---------

--- a/src/components/home/articles/home-articles.css
+++ b/src/components/home/articles/home-articles.css
@@ -123,7 +123,7 @@
 		-webkit-box-orient: vertical;
 
 		& > a {
-			@media (hover: hover) {
+			@media (hover: hover), (pointer: coarse) {
 				&::before {
 					/* Layout */
 					inset: 0;
